media-processor/deployment-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media-processor-api
  labels:
    app: media-processor
    role: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: media-processor
      role: api
  template:
    metadata:
      labels:
        app: media-processor
        role: api
    spec:
      containers:
        - name: api
          image: registry.lipcloud.org/media-processor:latest
          ports:
            - containerPort: 3000
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
