media-processor/service.yml
apiVersion: v1
kind: Service
metadata:
  name: media-processor-api-service
spec:
  selector:
    app: media-processor
    role: api
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
